css/main.css
@charset "UTF-8";

:root{
    --text_color: #333;
    --accent_color: #555;
    --background_color: #fff;
    --background_color_hover: #fafafa;
}

@media all and (max-width: 768px) {
    :root{
        --search_input_width: 320px;
        --search_input_height: 40px;
        --border: 1px solid #aaa;
        --border_hover: 1px solid #aaa;
    }
}

@media all and (min-width: 769px) {
    :root{
        --search_input_width: 640px;
        --search_input_height: 45px;
        --border: 2px solid #aaa;
        --border_hover: 2px solid #aaa;
    }
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    color: var(--text_color);
    user-select: none;
}

body{
    display: flex;

    font-family: 'Hiragino Kaku Gothic Pro','ヒラギノ角ゴ Pro W3', 'Noto Sans JP', 'Roboto', sans-serif;

    width: 100%;
    min-height: 100vh;

    overflow: scroll;

    padding: 2rem 0;
    margin: 0;
    
    align-items: center;
}

h2{
    width: 100%;
    margin: 16px 0;
}

#main{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 100%;

    background: var(--background_color);
}

#title{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;

    height: fit-content;

    padding: 0;
    margin: 16px 0;

    font-size: 2.5rem;
    font-weight: bolder;
}

#title span{
    font-size: 1rem;
    font-weight: normal;
    height: fit-content;
}

#search{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: relative;

    margin-block-start: 1rem;
    margin-block-end: 1rem;
}

#search #search_input{
    justify-content: center;
    align-items: center;

    width: var(--search_input_width);
    height: var(--search_input_height);

    padding: 10px calc(var(--search_input_height) / 2) 10px var(--search_input_height);

    font-size: 1rem;

    /* box-shadow: 0 0 6px #aaa; */

    background-color: transparent;
    border: var(--border);
    border-radius: calc(var(--search_input_height) / 2);

    transition: border .3s ease-in-out;

}

#search #search_input:focus-visible{
    outline: none;

    border: var(--border_hover);
}

#search #search_icon{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;

    width: calc(var(--search_input_height) - 10px);
    height: calc(var(--search_input_height) - 10px);

    left: 10px;

    transition: color .3s ease-in-out;

}

#search #search_input:focus-visible+#search_icon{
    color: var(--accent_color);
}

#app_list{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: left;
    flex-wrap: wrap;

    width: var(--search_input_width);
}

#app_list .app{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 64px;
    height: 64px;

    margin: 0 8px 36px;
    padding: 5px;

    text-decoration: none;

    /* box-shadow: 0 0 6px #111; */

    /* background-color: var(--text_color); */
    /* border: var(--border); */
    border-radius: 5px;

    transition: background-color .3s ease-in-out;
}

#app_list .app:hover{
    /* border: var(--border_hover); */
    background-color: #f3f3f3;

    /* transform: scale(1.05); */
}

#app_list .app i{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 44px;

    padding-top: 4px;

    font-size: 26px;
    /* color: var(--background_color); */
}

#app_list .app span{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;

    width: 100%;
    height: 20px;

    font-size: 9px;
    font-weight: bold;
    /* color: var(--background_color); */
}

#other_files{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    width: var(--search_input_width);

    padding: 16px 0;


}

#other_files>ul{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    margin: 0;
    padding: 0;

    width: 100%;
    overflow-y: scroll;

    border: #ddd solid 1px;
    border-top: none;
    border-radius: 8px;

}

#other_files>ul>li{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;

    width: 100%;


    list-style: none;
}

#other_files>ul>li>a{
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;

    width: 100%;

    text-decoration: none;

    padding: 8px;

    border-top: #ddd solid 1px;

    font-size: 12px;

    transition: background-color .3s ease-in-out;
}

#other_files>ul>li>a>i{
    font-size: 14px;
    margin-right: 5px;
}

#other_files>ul>li>a:hover{
    background-color: #fafafa;
}

